# DataPipeline

DataPipeline/: CMakeLists.txt  conanfile.txt
DataPipeline/src/: main.cpp
DataPipeline/src/core/: message_queue.h
DataPipeline/tests/unit/: test_queue.cpp
